--- a/cn.zh-cn/用户指南/主机监控简介.md
+++ b/cn.zh-cn/用户指南/主机监控简介.md
@@ -4,7 +4,7 @@
 
 >![](public_sys-resources/icon-note.gif) **说明：**   
 >-   目前支持Linux操作系统和Windows操作系统。支持的系统请参见[Agent支持的系统有哪些？](https://support.huaweicloud.com/ces_faq/ces_faq_0024.html)。  
->-   区域可选华北-北京一（cn-north-1）、华南-广州（cn-south-1）、华东-上海二（cn-east-2）、亚太-香港（ap-southeast-1），亚太-曼谷（ap-southeast-2），其他暂不支持。  
+>-   区域可选华北-北京一（cn-north-1）、华北-北京四（cn-north-4）、华南-广州（cn-south-1）、华东-上海二（cn-east-2）、亚太-香港（ap-southeast-1），亚太-曼谷（ap-southeast-2），其他暂不支持。  
 >-   ECS规格建议使用“2核 | 2GB”或更高配置。  
 >-   Agent使用中会占用系统端口，可以参考[手动配置Agent](手动配置Agent.md)中配置ClientPort与PortNum。若Agent端口与使用的业务端口冲突，可以参考[业务端口被Agent占用该如何处理](https://support.huaweicloud.com/ces_faq/ces_faq_0037.html)来处理。  
 
