--- a/cn.zh-cn/用户指南/修复插件配置.md
+++ b/cn.zh-cn/用户指南/修复插件配置.md
@@ -5,8 +5,8 @@
 本章节主要介绍安装Agent后，修复插件配置，免去手动配置Agent的步骤。
 
 >![](public_sys-resources/icon-note.gif) **说明：**   
->"批量修复插件配置"针对1.0.5及以上版本的Agent，低于该版本请升级Agent后再执行"批量修复插件配置"，或参考[手动配置Agent](手动配置Agent.md)手动配置Agent。  
->"批量修复插件配置"暂不支持裸金属服务器，裸金属服务器配置Agent，请参见[手动配置Agent](手动配置Agent.md)章节。  
+>"修复插件配置"针对1.0.5及以上版本的Agent，低于该版本请升级Agent后再执行"修复插件配置"，或参考[手动配置Agent](手动配置Agent.md)手动配置Agent。  
+>"修复插件配置"暂不支持裸金属服务器，裸金属服务器配置Agent，请参见[手动配置Agent](手动配置Agent.md)章节。  
 
 ## 操作步骤<a name="section438643513521"></a>
 
