--- a/cn.zh-cn/用户指南/修改告警规则.md
+++ b/cn.zh-cn/用户指南/修改告警规则.md
@@ -9,122 +9,104 @@
     -   在“告警规则”界面，单击待修改告警规则所在行的“修改”按钮；
     -   在“告警规则”界面，选择待修改告警规则名称，进入告警规则详情页面，单击右上角“修改”。
 
-5.  在弹出的“修改告警规则”对话框中修改告警规则配置参数，如[表1](#table4593201331917)所示。
+5.  在弹出的“修改告警规则”对话框中修改告警规则配置参数，如[表1](#table1142844371817)所示。
 
-**图 1**  修改告警规则<a name="fig1525723218814"></a>  
-![](figures/修改告警规则.png "修改告警规则")
+    **表 1**  配置参数
 
-**表 1**  配置参数
+    <a name="table1142844371817"></a>
+    <table><thead align="left"><tr id="row743315437184"><th class="cellrowborder" colspan="2" valign="top" id="mcps1.2.5.1.1"><p id="p16589144702716"><a name="p16589144702716"></a><a name="p16589144702716"></a>参数</p>
+    </th>
+    <th class="cellrowborder" valign="top" id="mcps1.2.5.1.2"><p id="p124351443121816"><a name="p124351443121816"></a><a name="p124351443121816"></a>参数说明</p>
+    </th>
+    <th class="cellrowborder" valign="top" id="mcps1.2.5.1.3"><p id="p6436543161815"><a name="p6436543161815"></a><a name="p6436543161815"></a>取值样例</p>
+    </th>
+    </tr>
+    </thead>
+    <tbody><tr id="row86129491915"><td class="cellrowborder" rowspan="2" valign="top" width="9.73%" headers="mcps1.2.5.1.1 "><p id="p11589647172719"><a name="p11589647172719"></a><a name="p11589647172719"></a>规则信息</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="13.51%" headers="mcps1.2.5.1.1 "><p id="p17775555197"><a name="p17775555197"></a><a name="p17775555197"></a>名称</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="46.239999999999995%" headers="mcps1.2.5.1.2 "><p id="p13777454198"><a name="p13777454198"></a><a name="p13777454198"></a>系统会随机产生一个名称，用户也可以进行修改。</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="30.520000000000003%" headers="mcps1.2.5.1.3 "><p id="p277918501911"><a name="p277918501911"></a><a name="p277918501911"></a>alarm-b6al</p>
+    </td>
+    </tr>
+    <tr id="row1142518221918"><td class="cellrowborder" valign="top" headers="mcps1.2.5.1.1 "><p id="p57801357195"><a name="p57801357195"></a><a name="p57801357195"></a>描述</p>
+    </td>
+    <td class="cellrowborder" valign="top" headers="mcps1.2.5.1.1 "><p id="p678385121910"><a name="p678385121910"></a><a name="p678385121910"></a>告警规则描述（此参数非必填项）。</p>
+    </td>
+    <td class="cellrowborder" valign="top" headers="mcps1.2.5.1.2 "><p id="p278513561918"><a name="p278513561918"></a><a name="p278513561918"></a>-</p>
+    </td>
+    </tr>
+    <tr id="row17115131915207"><td class="cellrowborder" rowspan="4" valign="top" width="9.73%" headers="mcps1.2.5.1.1 "><p id="p958924719272"><a name="p958924719272"></a><a name="p958924719272"></a>告警内容</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="13.51%" headers="mcps1.2.5.1.1 "><p id="p152184461803"><a name="p152184461803"></a><a name="p152184461803"></a>监控范围</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="46.239999999999995%" headers="mcps1.2.5.1.2 "><p id="p18832215826"><a name="p18832215826"></a><a name="p18832215826"></a>告警规则适用的资源范围，可选择资源分组或指定资源。</p>
+    <div class="note" id="note183241514217"><a name="note183241514217"></a><a name="note183241514217"></a><span class="notetitle"> 说明： </span><div class="notebody"><p id="p12630192210"><a name="p12630192210"></a><a name="p12630192210"></a>当监控对象为指定资源时，可新增监控对象，并可解除原监控对象。</p>
+    </div></div>
+    </td>
+    <td class="cellrowborder" valign="top" width="30.520000000000003%" headers="mcps1.2.5.1.3 "><p id="p32219468018"><a name="p32219468018"></a><a name="p32219468018"></a>指定资源</p>
+    </td>
+    </tr>
+    <tr id="row10276142432414"><td class="cellrowborder" valign="top" headers="mcps1.2.5.1.1 "><p id="p124541643191813"><a name="p124541643191813"></a><a name="p124541643191813"></a>告警策略</p>
+    </td>
+    <td class="cellrowborder" valign="top" headers="mcps1.2.5.1.1 "><p id="p1445519439188"><a name="p1445519439188"></a><a name="p1445519439188"></a>触发告警规则的告警策略。</p>
+    <p id="p1045534319188"><a name="p1045534319188"></a><a name="p1045534319188"></a>例如：CPU使用率，监控周期为5分钟，连续三个周期原始值≥80%</p>
+    </td>
+    <td class="cellrowborder" valign="top" headers="mcps1.2.5.1.2 "><p id="p0456134301818"><a name="p0456134301818"></a><a name="p0456134301818"></a>-</p>
+    </td>
+    </tr>
+    <tr id="row844974321815"><td class="cellrowborder" valign="top" headers="mcps1.2.5.1.1 "><p id="p1045018438182"><a name="p1045018438182"></a><a name="p1045018438182"></a>挂载点</p>
+    </td>
+    <td class="cellrowborder" valign="top" headers="mcps1.2.5.1.1 "><p id="p1945117436182"><a name="p1945117436182"></a><a name="p1945117436182"></a>当监控指标为细颗粒度的磁盘类监控指标时需配置该参数。</p>
+    </td>
+    <td class="cellrowborder" valign="top" headers="mcps1.2.5.1.2 "><p id="p10453164311187"><a name="p10453164311187"></a><a name="p10453164311187"></a>/</p>
+    </td>
+    </tr>
+    <tr id="row12470143131814"><td class="cellrowborder" valign="top" headers="mcps1.2.5.1.1 "><p id="p6471144313182"><a name="p6471144313182"></a><a name="p6471144313182"></a>告警级别</p>
+    </td>
+    <td class="cellrowborder" valign="top" headers="mcps1.2.5.1.1 "><p id="p947211438183"><a name="p947211438183"></a><a name="p947211438183"></a>根据告警的严重程度不同等级，可选择紧急、重要、次要、提示。</p>
+    </td>
+    <td class="cellrowborder" valign="top" headers="mcps1.2.5.1.2 "><p id="p16472144313183"><a name="p16472144313183"></a><a name="p16472144313183"></a>重要</p>
+    </td>
+    </tr>
+    <tr id="row9472843201819"><td class="cellrowborder" rowspan="4" valign="top" width="9.73%" headers="mcps1.2.5.1.1 "><p id="p8590114762718"><a name="p8590114762718"></a><a name="p8590114762718"></a>告警通知</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="13.51%" headers="mcps1.2.5.1.1 "><p id="p1847484318183"><a name="p1847484318183"></a><a name="p1847484318183"></a>发送通知</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="46.239999999999995%" headers="mcps1.2.5.1.2 "><p id="p1747514319185"><a name="p1747514319185"></a><a name="p1747514319185"></a>配置是否发送邮件、短信、HTTP和HTTPS通知用户。</p>
+    <p id="p10475184301819"><a name="p10475184301819"></a><a name="p10475184301819"></a>选择“是”（推荐选择），会发送通知；选择“否”，不会发送通知。</p>
+    </td>
+    <td class="cellrowborder" valign="top" width="30.520000000000003%" headers="mcps1.2.5.1.3 "><p id="p5477164361810"><a name="p5477164361810"></a><a name="p5477164361810"></a>是</p>
+    </td>
+    </tr>
+    <tr id="row2478104351817"><td class="cellrowborder" valign="top" headers="mcps1.2.5.1.1 "><p id="p174791043171816"><a name="p174791043171816"></a><a name="p174791043171816"></a>生效时间</p>
+    </td>
+    <td class="cellrowborder" valign="top" headers="mcps1.2.5.1.1 "><p id="p124808433188"><a name="p124808433188"></a><a name="p124808433188"></a>该告警规则仅在生效时间内发送通知消息。</p>
+    <p id="p134816438187"><a name="p134816438187"></a><a name="p134816438187"></a>如生效时间为00:00-8:00，则该告警规则仅在00:00-8:00发送通知消息。</p>
+    </td>
+    <td class="cellrowborder" valign="top" headers="mcps1.2.5.1.2 "><p id="p17482124341811"><a name="p17482124341811"></a><a name="p17482124341811"></a>-</p>
+    </td>
+    </tr>
+    <tr id="row34821743151816"><td class="cellrowborder" valign="top" headers="mcps1.2.5.1.1 "><p id="p12483543161820"><a name="p12483543161820"></a><a name="p12483543161820"></a>主题通知</p>
+    </td>
+    <td class="cellrowborder" valign="top" headers="mcps1.2.5.1.1 "><p id="p1248454319186"><a name="p1248454319186"></a><a name="p1248454319186"></a>需要发送告警通知的主题名称。</p>
+    <p id="p13485643161811"><a name="p13485643161811"></a><a name="p13485643161811"></a>当发送通知选择“是”时，需要选择已有的主题名称，若此处没有需要的主题则需先创建主题，该功能会调用消息通知服务（SMN），创建主题请参见《消息通知服务用户指南》。</p>
+    </td>
+    <td class="cellrowborder" valign="top" headers="mcps1.2.5.1.2 "><p id="p1148618436183"><a name="p1148618436183"></a><a name="p1148618436183"></a>-</p>
+    </td>
+    </tr>
+    <tr id="row1148614314181"><td class="cellrowborder" valign="top" headers="mcps1.2.5.1.1 "><p id="p1848854361813"><a name="p1848854361813"></a><a name="p1848854361813"></a>触发条件</p>
+    </td>
+    <td class="cellrowborder" valign="top" headers="mcps1.2.5.1.1 "><p id="p3490243171813"><a name="p3490243171813"></a><a name="p3490243171813"></a>可以选择“出现告警”、“恢复正常两种状态，作为触发告警通知的条件。</p>
+    </td>
+    <td class="cellrowborder" valign="top" headers="mcps1.2.5.1.2 "><p id="p19493743161810"><a name="p19493743161810"></a><a name="p19493743161810"></a>-</p>
+    </td>
+    </tr>
+    </tbody>
+    </table>
 
-<a name="table4593201331917"></a>
-<table><thead align="left"><tr id="row19594161331919"><th class="cellrowborder" valign="top" width="27.272727272727277%" id="mcps1.2.4.1.1"><p id="p175941713131912"><a name="p175941713131912"></a><a name="p175941713131912"></a>参数</p>
-</th>
-<th class="cellrowborder" valign="top" width="45.45454545454546%" id="mcps1.2.4.1.2"><p id="p115941113151911"><a name="p115941113151911"></a><a name="p115941113151911"></a>参数说明</p>
-</th>
-<th class="cellrowborder" valign="top" width="27.272727272727277%" id="mcps1.2.4.1.3"><p id="p195945135197"><a name="p195945135197"></a><a name="p195945135197"></a>取值样例</p>
-</th>
-</tr>
-</thead>
-<tbody><tr id="row1760171341916"><td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.1 "><p id="p156019137195"><a name="p156019137195"></a><a name="p156019137195"></a>名称</p>
-</td>
-<td class="cellrowborder" valign="top" width="45.45454545454546%" headers="mcps1.2.4.1.2 "><p id="p1260271312197"><a name="p1260271312197"></a><a name="p1260271312197"></a>系统会随机产生一个名称，用户也可以进行修改。</p>
-</td>
-<td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.3 "><p id="p1460231313196"><a name="p1460231313196"></a><a name="p1460231313196"></a>alarm-b6al</p>
-</td>
-</tr>
-<tr id="row196021313131913"><td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.1 "><p id="p5602181381916"><a name="p5602181381916"></a><a name="p5602181381916"></a>描述</p>
-</td>
-<td class="cellrowborder" valign="top" width="45.45454545454546%" headers="mcps1.2.4.1.2 "><p id="p2602151319190"><a name="p2602151319190"></a><a name="p2602151319190"></a>告警规则描述（此参数非必填项）。</p>
-</td>
-<td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.3 "><p id="p960251301918"><a name="p960251301918"></a><a name="p960251301918"></a>-</p>
-</td>
-</tr>
-<tr id="row86021713171911"><td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.1 "><p id="p3603101311914"><a name="p3603101311914"></a><a name="p3603101311914"></a>资源类型</p>
-</td>
-<td class="cellrowborder" valign="top" width="45.45454545454546%" headers="mcps1.2.4.1.2 "><p id="p1460311315194"><a name="p1460311315194"></a><a name="p1460311315194"></a>配置告警规则监控的服务名称。</p>
-</td>
-<td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.3 "><p id="p1160351318192"><a name="p1160351318192"></a><a name="p1160351318192"></a>Elastic Cloud Server</p>
-</td>
-</tr>
-<tr id="row1160314138193"><td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.1 "><p id="p1060321321917"><a name="p1060321321917"></a><a name="p1060321321917"></a>维度</p>
-</td>
-<td class="cellrowborder" valign="top" width="45.45454545454546%" headers="mcps1.2.4.1.2 "><p id="p12603191313198"><a name="p12603191313198"></a><a name="p12603191313198"></a>用于指定告警规则对应指标的维度名称。</p>
-</td>
-<td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.3 "><p id="p11603113151916"><a name="p11603113151916"></a><a name="p11603113151916"></a>ECS</p>
-</td>
-</tr>
-<tr id="row5604161321912"><td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.1 "><p id="p10604121371918"><a name="p10604121371918"></a><a name="p10604121371918"></a>监控对象</p>
-</td>
-<td class="cellrowborder" valign="top" width="45.45454545454546%" headers="mcps1.2.4.1.2 "><p id="p56048138195"><a name="p56048138195"></a><a name="p56048138195"></a>用来配置该告警规则针对的具体资源，可以是一个或多个。</p>
-</td>
-<td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.3 "><p id="p560410137192"><a name="p560410137192"></a><a name="p560410137192"></a>-</p>
-</td>
-</tr>
-<tr id="row247871852614"><td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.1 "><p id="p16479818142614"><a name="p16479818142614"></a><a name="p16479818142614"></a>监控对象ID</p>
-</td>
-<td class="cellrowborder" valign="top" width="45.45454545454546%" headers="mcps1.2.4.1.2 "><p id="p847914187260"><a name="p847914187260"></a><a name="p847914187260"></a>资源ID。</p>
-</td>
-<td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.3 "><p id="p4479161816263"><a name="p4479161816263"></a><a name="p4479161816263"></a>-</p>
-</td>
-</tr>
-<tr id="row3604111316198"><td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.1 "><p id="p15605171321914"><a name="p15605171321914"></a><a name="p15605171321914"></a>监控指标</p>
-</td>
-<td class="cellrowborder" valign="top" width="45.45454545454546%" headers="mcps1.2.4.1.2 "><p id="p0606181321917"><a name="p0606181321917"></a><a name="p0606181321917"></a>例如：</p>
-<a name="ul36061513161912"></a><a name="ul36061513161912"></a><ul id="ul36061513161912"><li>CPU使用率<p id="p3607141391912"><a name="p3607141391912"></a><a name="p3607141391912"></a>该指标用于统计测量对象的CPU使用率，以百分比为单位。</p>
-</li></ul>
-<a name="ul1260741314197"></a><a name="ul1260741314197"></a><ul id="ul1260741314197"><li>内存使用率<p id="p12607121318195"><a name="p12607121318195"></a><a name="p12607121318195"></a>该指标用于统计测量对象的内存使用率，以百分比为单位。</p>
-</li></ul>
-</td>
-<td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.3 "><p id="p86071013111915"><a name="p86071013111915"></a><a name="p86071013111915"></a>CPU使用率</p>
-</td>
-</tr>
-<tr id="row345848174113"><td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.1 "><p id="p9435204373719"><a name="p9435204373719"></a><a name="p9435204373719"></a>告警策略</p>
-</td>
-<td class="cellrowborder" valign="top" width="45.45454545454546%" headers="mcps1.2.4.1.2 "><p id="p2043584343715"><a name="p2043584343715"></a><a name="p2043584343715"></a>触发告警的告警策略。</p>
-<p id="p043712111488"><a name="p043712111488"></a><a name="p043712111488"></a>例如：监控周期为5分钟，连续三个周期原始值≥80%</p>
-</td>
-<td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.3 "><p id="p54357432379"><a name="p54357432379"></a><a name="p54357432379"></a>-</p>
-</td>
-</tr>
-<tr id="row108721617134814"><td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.1 "><p id="p1195420845111"><a name="p1195420845111"></a><a name="p1195420845111"></a>告警级别</p>
-</td>
-<td class="cellrowborder" valign="top" width="45.45454545454546%" headers="mcps1.2.4.1.2 "><p id="p17956884516"><a name="p17956884516"></a><a name="p17956884516"></a>根据告警的严重程度不同等级，可选择紧急、重要、次要、提示。</p>
-</td>
-<td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.3 "><p id="p8956389517"><a name="p8956389517"></a><a name="p8956389517"></a>重要</p>
-</td>
-</tr>
-<tr id="row26099137193"><td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.1 "><p id="p860981310196"><a name="p860981310196"></a><a name="p860981310196"></a>发送通知</p>
-</td>
-<td class="cellrowborder" valign="top" width="45.45454545454546%" headers="mcps1.2.4.1.2 "><p id="p18609213181917"><a name="p18609213181917"></a><a name="p18609213181917"></a>配置是否发送邮件、短信通知用户或发送HTTP、HTTPS消息给服务器。</p>
-</td>
-<td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.3 "><p id="p206101131198"><a name="p206101131198"></a><a name="p206101131198"></a>-</p>
-</td>
-</tr>
-<tr id="row79896198452"><td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.1 "><p id="p165875094913"><a name="p165875094913"></a><a name="p165875094913"></a>生效时间</p>
-</td>
-<td class="cellrowborder" valign="top" width="45.45454545454546%" headers="mcps1.2.4.1.2 "><p id="p7658165024912"><a name="p7658165024912"></a><a name="p7658165024912"></a>该告警规则仅在生效时间内发送通知消息。</p>
-<p id="p52121744532"><a name="p52121744532"></a><a name="p52121744532"></a>如生效时间为00:00-8:00，则该告警规则仅在00:00-8:00发送通知消息。</p>
-</td>
-<td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.3 "><p id="p96581505499"><a name="p96581505499"></a><a name="p96581505499"></a>-</p>
-</td>
-</tr>
-<tr id="row545132284319"><td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.1 "><p id="p65331051036"><a name="p65331051036"></a><a name="p65331051036"></a>主题通知</p>
-</td>
-<td class="cellrowborder" valign="top" width="45.45454545454546%" headers="mcps1.2.4.1.2 "><p id="p195331052311"><a name="p195331052311"></a><a name="p195331052311"></a>需要发送告警通知的主题名称。</p>
-<p id="p45331951433"><a name="p45331951433"></a><a name="p45331951433"></a>当发送通知选择“是”时，需要选择已有的主题名称，若此处没有需要的主题则需先创建主题，该功能会调用消息通知服务（SMN），创建主题请参见《消息通知服务用户指南》。</p>
-</td>
-<td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.3 "><p id="p5534552312"><a name="p5534552312"></a><a name="p5534552312"></a>-</p>
-</td>
-</tr>
-<tr id="row1976684444420"><td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.1 "><p id="p1953418515316"><a name="p1953418515316"></a><a name="p1953418515316"></a>触发条件</p>
-</td>
-<td class="cellrowborder" valign="top" width="45.45454545454546%" headers="mcps1.2.4.1.2 "><p id="p353475732"><a name="p353475732"></a><a name="p353475732"></a>可以选择“出现告警”、“恢复正常”两种状态，作为触发告警通知的条件。</p>
-</td>
-<td class="cellrowborder" valign="top" width="27.272727272727277%" headers="mcps1.2.4.1.3 "><p id="p1534455310"><a name="p1534455310"></a><a name="p1534455310"></a>-</p>
-</td>
-</tr>
-</tbody>
-</table>
 
-1.  单击“确定”，完成告警规则的修改。
+1.  单击“立即修改”，完成告警规则的修改。
 
