--- a/cn.zh-cn/用户指南/修改站点监控.md
+++ b/cn.zh-cn/用户指南/修改站点监控.md
@@ -9,7 +9,7 @@
 1.  登录管理控制台。
 2.  单击“管理与部署 \> 云监控 \> 站点监控”。
 3.  在“站点监控”界面，单击监控站点所在行的“更多”列的“修改站点监控”，进入“修改监控站点”界面。
-4.  在“修改监控站点”界面，根据界面提示配置参数，参数如[表2](创建告警规则-1.md#table136271727428)所示。
+4.  在“修改监控站点”界面，根据界面提示配置参数，参数如[表1](创建站点监控.md#table133239595719)所示。
 
     >![](public_sys-resources/icon-note.gif) **说明：**   
     >站点类型与站点地址不能修改，因不同站点类型高级配置信息不同，切换后可能会丢失数据。  
