--- a/cn.zh-cn/用户指南/删除监控面板.md
+++ b/cn.zh-cn/用户指南/删除监控面板.md
@@ -6,5 +6,5 @@
 
 1.  登录管理控制台。
 2.  单击“管理与部署 \> 云监控”。
-3.  单击页面左侧的监控面板，选择需要删除的监控面板，单击页面右上角的“删除”，选择“确认”，删除当前监控面板。
+3.  单击页面左侧的监控面板，选择需要删除的监控面板，单击页面右上角的“删除”，在弹出的删除监控面板页面，选择“是”，删除当前监控面板。
 
