--- a/cn.zh-cn/用户指南/数据仓库服务的监控指标.md
+++ b/cn.zh-cn/用户指南/数据仓库服务的监控指标.md
@@ -78,7 +78,7 @@
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.2 "><p id="p883316462410"><a name="p883316462410"></a><a name="p883316462410"></a>该指标用于表示数据库中所有数据总量大小。</p>
 <p id="p8569174510476"><a name="p8569174510476"></a><a name="p8569174510476"></a>单位：MB</p>
 </td>
-<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="p14834164112415"><a name="p14834164112415"></a><a name="p14834164112415"></a>0MB-36000MB</p>
+<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="p14834164112415"><a name="p14834164112415"></a><a name="p14834164112415"></a>0-36000 MB</p>
 </td>
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.4 "><p id="p726983614715"><a name="p726983614715"></a><a name="p726983614715"></a>1分钟</p>
 </td>
@@ -169,7 +169,7 @@
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.2 "><p id="p16852114172411"><a name="p16852114172411"></a><a name="p16852114172411"></a>该指标用于统计每个集群节点的数据磁盘总大小。</p>
 <p id="p1356144465019"><a name="p1356144465019"></a><a name="p1356144465019"></a>单位：GB</p>
 </td>
-<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="p385219462412"><a name="p385219462412"></a><a name="p385219462412"></a>100GB-2000GB</p>
+<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="p385219462412"><a name="p385219462412"></a><a name="p385219462412"></a>100-2000 GB</p>
 </td>
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.4 "><p id="p13365541194717"><a name="p13365541194717"></a><a name="p13365541194717"></a>1分钟</p>
 </td>
@@ -179,7 +179,7 @@
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.2 "><p id="p188521948247"><a name="p188521948247"></a><a name="p188521948247"></a>该指标用于统计每个集群节点的数据磁盘已用大小。</p>
 <p id="p134476575507"><a name="p134476575507"></a><a name="p134476575507"></a>单位：GB</p>
 </td>
-<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="p14852348248"><a name="p14852348248"></a><a name="p14852348248"></a>0GB-3600GB</p>
+<td class="cellrowborder" valign="top" headers="mcps1.2.6.1.3 "><p id="p14852348248"><a name="p14852348248"></a><a name="p14852348248"></a>0-3600 GB</p>
 </td>
 <td class="cellrowborder" valign="top" headers="mcps1.2.6.1.4 "><p id="p1783164313478"><a name="p1783164313478"></a><a name="p1783164313478"></a>1分钟</p>
 </td>
