--- a/cn.zh-cn/用户指南/自定义进程监控.md
+++ b/cn.zh-cn/用户指南/自定义进程监控.md
@@ -3,7 +3,7 @@
 自定义进程监控可采集关键进程的数量，随时获取关键进程的运行状态。
 
 >![](public_sys-resources/icon-note.gif) **说明：**   
->自定义进程监控暂时只支持华南-广州（cn-south-1）、华东-上海二（cn-east-2），如果您想要使用云助手，请联系客服开通。  
+>自定义进程监控暂时只支持华南-广州（cn-south-1）、华东-上海二（cn-east-2），如果您想要使用自定义进程监控，请联系客服开通。  
 
 ## 示例说明<a name="section19991919151310"></a>
 
