--- a/cn.zh-cn/用户指南/云搜索服务的监控指标.md
+++ b/cn.zh-cn/用户指南/云搜索服务的监控指标.md
@@ -22,7 +22,7 @@
 <td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p1431964322314"><a name="p1431964322314"></a><a name="p1431964322314"></a>0,1,2</p>
 <p id="p1812933419343"><a name="p1812933419343"></a><a name="p1812933419343"></a>0表示健康状态，1表示亚健康状态，2表示集群异常。</p>
 </td>
-<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p1932044312237"><a name="p1932044312237"></a><a name="p1932044312237"></a>云搜索服务</p>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p1932044312237"><a name="p1932044312237"></a><a name="p1932044312237"></a>CSS集群</p>
 </td>
 <td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p915215955416"><a name="p915215955416"></a><a name="p915215955416"></a>1分钟</p>
 </td>
@@ -34,7 +34,7 @@
 </td>
 <td class="cellrowborder" valign="top" width="19.801980198019802%" headers="mcps1.2.6.1.3 "><p id="p1676461734411"><a name="p1676461734411"></a><a name="p1676461734411"></a>0-100%</p>
 </td>
-<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p1576471784413"><a name="p1576471784413"></a><a name="p1576471784413"></a>云搜索服务</p>
+<td class="cellrowborder" valign="top" width="14.85148514851485%" headers="mcps1.2.6.1.4 "><p id="p173746537577"><a name="p173746537577"></a><a name="p173746537577"></a>CSS集群</p>
 </td>
 <td class="cellrowborder" valign="top" width="15.841584158415841%" headers="mcps1.2.6.1.5 "><p id="p181528592546"><a name="p181528592546"></a><a name="p181528592546"></a>1分钟</p>
 </td>
