--- a/cn.zh-cn/用户指南/云硬盘的监控指标.md
+++ b/cn.zh-cn/用户指南/云硬盘的监控指标.md
@@ -11,36 +11,36 @@
 </th>
 </tr>
 </thead>
-<tbody><tr id="zh-cn_topic_0095137102_row130211454448"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p430284514414"><a name="zh-cn_topic_0095137102_p430284514414"></a><a name="zh-cn_topic_0095137102_p430284514414"></a>云硬盘读速率</p>
+<tbody><tr id="zh-cn_topic_0095137102_row58713584313"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p639293919437"><a name="zh-cn_topic_0095137102_p639293919437"></a><a name="zh-cn_topic_0095137102_p639293919437"></a>磁盘读带宽</p>
 </td>
-<td class="cellrowborder" valign="top" width="49.25373134328358%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0095137102_p3515183844613"><a name="zh-cn_topic_0095137102_p3515183844613"></a><a name="zh-cn_topic_0095137102_p3515183844613"></a>该指标用于统计每秒从测量对象读出数据量。</p>
-<p id="zh-cn_topic_0095137102_p3303745174410"><a name="zh-cn_topic_0095137102_p3303745174410"></a><a name="zh-cn_topic_0095137102_p3303745174410"></a>单位：Byte/s。</p>
+<td class="cellrowborder" valign="top" width="49.25373134328358%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0095137102_p63947395438"><a name="zh-cn_topic_0095137102_p63947395438"></a><a name="zh-cn_topic_0095137102_p63947395438"></a>该指标用于统计每秒从测量对象读出数据量。</p>
+<p id="zh-cn_topic_0095137102_p19395103912436"><a name="zh-cn_topic_0095137102_p19395103912436"></a><a name="zh-cn_topic_0095137102_p19395103912436"></a>单位：Byte/s。</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.388059701492537%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0095137102_p133031245114411"><a name="zh-cn_topic_0095137102_p133031245114411"></a><a name="zh-cn_topic_0095137102_p133031245114411"></a>云硬盘</p>
-</td>
-</tr>
-<tr id="zh-cn_topic_0095137102_row7303845134416"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p2030417459447"><a name="zh-cn_topic_0095137102_p2030417459447"></a><a name="zh-cn_topic_0095137102_p2030417459447"></a>云硬盘写速率</p>
-</td>
-<td class="cellrowborder" valign="top" width="49.25373134328358%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0095137102_p1830454513445"><a name="zh-cn_topic_0095137102_p1830454513445"></a><a name="zh-cn_topic_0095137102_p1830454513445"></a>该指标用于统计每秒写到测量对象的数据量。</p>
-<p id="zh-cn_topic_0095137102_p14502105710464"><a name="zh-cn_topic_0095137102_p14502105710464"></a><a name="zh-cn_topic_0095137102_p14502105710464"></a>单位：Byte/s。</p>
-</td>
-<td class="cellrowborder" valign="top" width="22.388059701492537%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0095137102_p13041545204412"><a name="zh-cn_topic_0095137102_p13041545204412"></a><a name="zh-cn_topic_0095137102_p13041545204412"></a>云硬盘</p>
+<td class="cellrowborder" valign="top" width="22.388059701492537%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0095137102_p75621043204313"><a name="zh-cn_topic_0095137102_p75621043204313"></a><a name="zh-cn_topic_0095137102_p75621043204313"></a>云硬盘</p>
 </td>
 </tr>
-<tr id="zh-cn_topic_0095137102_row12304345114414"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p1330517458441"><a name="zh-cn_topic_0095137102_p1330517458441"></a><a name="zh-cn_topic_0095137102_p1330517458441"></a>云硬盘读操作速率</p>
+<tr id="zh-cn_topic_0095137102_row79016514437"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p1039719396437"><a name="zh-cn_topic_0095137102_p1039719396437"></a><a name="zh-cn_topic_0095137102_p1039719396437"></a>磁盘写带宽</p>
 </td>
-<td class="cellrowborder" valign="top" width="49.25373134328358%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0095137102_p1684226476"><a name="zh-cn_topic_0095137102_p1684226476"></a><a name="zh-cn_topic_0095137102_p1684226476"></a>该指标用于统计每秒从测量对象读取数据的请求次数。</p>
-<p id="zh-cn_topic_0095137102_p163051545204412"><a name="zh-cn_topic_0095137102_p163051545204412"></a><a name="zh-cn_topic_0095137102_p163051545204412"></a>单位：请求/s。</p>
+<td class="cellrowborder" valign="top" width="49.25373134328358%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0095137102_p1439873904318"><a name="zh-cn_topic_0095137102_p1439873904318"></a><a name="zh-cn_topic_0095137102_p1439873904318"></a>该指标用于统计每秒写到测量对象的数据量。</p>
+<p id="zh-cn_topic_0095137102_p1040033904311"><a name="zh-cn_topic_0095137102_p1040033904311"></a><a name="zh-cn_topic_0095137102_p1040033904311"></a>单位：Byte/s。</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.388059701492537%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0095137102_p930514457445"><a name="zh-cn_topic_0095137102_p930514457445"></a><a name="zh-cn_topic_0095137102_p930514457445"></a>云硬盘</p>
+<td class="cellrowborder" valign="top" width="22.388059701492537%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0095137102_p1856324311438"><a name="zh-cn_topic_0095137102_p1856324311438"></a><a name="zh-cn_topic_0095137102_p1856324311438"></a>云硬盘</p>
 </td>
 </tr>
-<tr id="zh-cn_topic_0095137102_row1830644519448"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p1130664514413"><a name="zh-cn_topic_0095137102_p1130664514413"></a><a name="zh-cn_topic_0095137102_p1130664514413"></a>云硬盘写操作速率</p>
+<tr id="zh-cn_topic_0095137102_row29018554320"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p16405193904316"><a name="zh-cn_topic_0095137102_p16405193904316"></a><a name="zh-cn_topic_0095137102_p16405193904316"></a>磁盘读IOPS</p>
 </td>
-<td class="cellrowborder" valign="top" width="49.25373134328358%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0095137102_p193064453441"><a name="zh-cn_topic_0095137102_p193064453441"></a><a name="zh-cn_topic_0095137102_p193064453441"></a>该指标用于统计每秒到测量对象写数据的请求次数。</p>
-<p id="zh-cn_topic_0095137102_p1476120263472"><a name="zh-cn_topic_0095137102_p1476120263472"></a><a name="zh-cn_topic_0095137102_p1476120263472"></a>单位：请求/s。</p>
+<td class="cellrowborder" valign="top" width="49.25373134328358%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0095137102_p1440793924312"><a name="zh-cn_topic_0095137102_p1440793924312"></a><a name="zh-cn_topic_0095137102_p1440793924312"></a>该指标用于统计每秒从测量对象读取数据的请求次数。</p>
+<p id="zh-cn_topic_0095137102_p2040873910435"><a name="zh-cn_topic_0095137102_p2040873910435"></a><a name="zh-cn_topic_0095137102_p2040873910435"></a>单位：请求/s。</p>
 </td>
-<td class="cellrowborder" valign="top" width="22.388059701492537%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0095137102_p2308124574417"><a name="zh-cn_topic_0095137102_p2308124574417"></a><a name="zh-cn_topic_0095137102_p2308124574417"></a>云硬盘</p>
+<td class="cellrowborder" valign="top" width="22.388059701492537%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0095137102_p12567114314431"><a name="zh-cn_topic_0095137102_p12567114314431"></a><a name="zh-cn_topic_0095137102_p12567114314431"></a>云硬盘</p>
+</td>
+</tr>
+<tr id="zh-cn_topic_0095137102_row17904512439"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p1941163924310"><a name="zh-cn_topic_0095137102_p1941163924310"></a><a name="zh-cn_topic_0095137102_p1941163924310"></a>磁盘写IOPS</p>
+</td>
+<td class="cellrowborder" valign="top" width="49.25373134328358%" headers="mcps1.2.4.1.2 "><p id="zh-cn_topic_0095137102_p24133398432"><a name="zh-cn_topic_0095137102_p24133398432"></a><a name="zh-cn_topic_0095137102_p24133398432"></a>该指标用于统计每秒到测量对象写入数据的请求次数。</p>
+<p id="zh-cn_topic_0095137102_p114151739164315"><a name="zh-cn_topic_0095137102_p114151739164315"></a><a name="zh-cn_topic_0095137102_p114151739164315"></a>单位：请求/s。</p>
+</td>
+<td class="cellrowborder" valign="top" width="22.388059701492537%" headers="mcps1.2.4.1.3 "><p id="zh-cn_topic_0095137102_p5569243174314"><a name="zh-cn_topic_0095137102_p5569243174314"></a><a name="zh-cn_topic_0095137102_p5569243174314"></a>云硬盘</p>
 </td>
 </tr>
 <tr id="zh-cn_topic_0095137102_row44137152423"><td class="cellrowborder" valign="top" width="28.35820895522388%" headers="mcps1.2.4.1.1 "><p id="zh-cn_topic_0095137102_p49626508493"><a name="zh-cn_topic_0095137102_p49626508493"></a><a name="zh-cn_topic_0095137102_p49626508493"></a>平均队列长度</p>
