--- a/cn.zh-cn/用户指南/添加监控视图.md
+++ b/cn.zh-cn/用户指南/添加监控视图.md
@@ -35,7 +35,7 @@
     </td>
     <td class="cellrowborder" valign="top" width="50.505050505050505%" headers="mcps1.2.4.1.2 "><p id="p19621674132834"><a name="p19621674132834"></a><a name="p19621674132834"></a>自定义关注指标组件的标题名称，该名称只能由中文、英文字母、数字、下划线、中划线组成。</p>
     </td>
-    <td class="cellrowborder" valign="top" width="33.333333333333336%" headers="mcps1.2.4.1.3 "><p id="p5621072813283"><a name="p5621072813283"></a><a name="p5621072813283"></a>用户自定义。</p>
+    <td class="cellrowborder" valign="top" width="33.333333333333336%" headers="mcps1.2.4.1.3 "><p id="p138959332441"><a name="p138959332441"></a><a name="p138959332441"></a>widget-axaj</p>
     </td>
     </tr>
     <tr id="row28440509201913"><td class="cellrowborder" valign="top" width="16.161616161616163%" headers="mcps1.2.4.1.1 "><p id="p21979859201913"><a name="p21979859201913"></a><a name="p21979859201913"></a>资源类型</p>
@@ -72,6 +72,6 @@
 
 5.  单击“确定”，完成监控视图的添加。
 
-    监控面板上可以查看新添加监控视图的监控走势图，单击![](figures/放大.png)，可放大查看详细的指标对比数据。
+    在所选的监控面板上可以查看新添加监控视图的监控走势图，单击![](figures/放大.png)，可放大查看详细的指标对比数据。
 
 
