--- a/cn.zh-cn/API参考/弹性云服务器监控指标说明.md
+++ b/cn.zh-cn/API参考/弹性云服务器监控指标说明.md
@@ -154,6 +154,52 @@ SYS.ECS
 </div></div>
 </td>
 </tr>
+<tr id="zh-cn_topic_0022067719_row108132131540"><td class="cellrowborder" valign="top" width="17.03%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0022067719_p188303137549"><a name="zh-cn_topic_0022067719_p188303137549"></a><a name="zh-cn_topic_0022067719_p188303137549"></a>cpu_credit_usage</p>
+</td>
+<td class="cellrowborder" valign="top" width="12.26%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0022067719_p876016214563"><a name="zh-cn_topic_0022067719_p876016214563"></a><a name="zh-cn_topic_0022067719_p876016214563"></a>CPU积分使用量</p>
+</td>
+<td class="cellrowborder" valign="top" width="32.75%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0022067719_p13650121923614"><a name="zh-cn_topic_0022067719_p13650121923614"></a><a name="zh-cn_topic_0022067719_p13650121923614"></a>该指标表示积分型实例累积花费的CPU积分数，以“分”为单位。</p>
+</td>
+<td class="cellrowborder" valign="top" width="13.530000000000001%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0022067719_p6830131314545"><a name="zh-cn_topic_0022067719_p6830131314545"></a><a name="zh-cn_topic_0022067719_p6830131314545"></a>≥0</p>
+</td>
+<td class="cellrowborder" valign="top" width="24.43%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0022067719_p483011131544"><a name="zh-cn_topic_0022067719_p483011131544"></a><a name="zh-cn_topic_0022067719_p483011131544"></a>仅T6型支持。</p>
+</td>
+</tr>
+<tr id="zh-cn_topic_0022067719_row1512151717546"><td class="cellrowborder" valign="top" width="17.03%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0022067719_p11217174541"><a name="zh-cn_topic_0022067719_p11217174541"></a><a name="zh-cn_topic_0022067719_p11217174541"></a>cpu_credit_balance</p>
+</td>
+<td class="cellrowborder" valign="top" width="12.26%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0022067719_p07609216563"><a name="zh-cn_topic_0022067719_p07609216563"></a><a name="zh-cn_topic_0022067719_p07609216563"></a>CPU积分累积量</p>
+</td>
+<td class="cellrowborder" valign="top" width="32.75%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0022067719_p2650161993610"><a name="zh-cn_topic_0022067719_p2650161993610"></a><a name="zh-cn_topic_0022067719_p2650161993610"></a>该指标表示实例自启动后已累积获得的CPU积分数，以“分”为单位。</p>
+</td>
+<td class="cellrowborder" valign="top" width="13.530000000000001%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0022067719_p1812171745419"><a name="zh-cn_topic_0022067719_p1812171745419"></a><a name="zh-cn_topic_0022067719_p1812171745419"></a>0分~最大积分</p>
+</td>
+<td class="cellrowborder" valign="top" width="24.43%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0022067719_p161216178544"><a name="zh-cn_topic_0022067719_p161216178544"></a><a name="zh-cn_topic_0022067719_p161216178544"></a>积分上限值，参照Flavor定义最大积分列。</p>
+<p id="zh-cn_topic_0022067719_p994247201514"><a name="zh-cn_topic_0022067719_p994247201514"></a><a name="zh-cn_topic_0022067719_p994247201514"></a>仅T6型支持。</p>
+</td>
+</tr>
+<tr id="zh-cn_topic_0022067719_row1122612207541"><td class="cellrowborder" valign="top" width="17.03%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0022067719_p182268201541"><a name="zh-cn_topic_0022067719_p182268201541"></a><a name="zh-cn_topic_0022067719_p182268201541"></a>cpu_surplus_credit_balance</p>
+</td>
+<td class="cellrowborder" valign="top" width="12.26%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0022067719_p476062155612"><a name="zh-cn_topic_0022067719_p476062155612"></a><a name="zh-cn_topic_0022067719_p476062155612"></a>CPU超额积分累积量</p>
+</td>
+<td class="cellrowborder" valign="top" width="32.75%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0022067719_p136801679374"><a name="zh-cn_topic_0022067719_p136801679374"></a><a name="zh-cn_topic_0022067719_p136801679374"></a>该指标表示在“CPU积分累积量”为零时，实例花费的超额积分数，以“分”为单位。</p>
+</td>
+<td class="cellrowborder" valign="top" width="13.530000000000001%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0022067719_p5226162075415"><a name="zh-cn_topic_0022067719_p5226162075415"></a><a name="zh-cn_topic_0022067719_p5226162075415"></a>0分~积分上限</p>
+</td>
+<td class="cellrowborder" valign="top" width="24.43%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0022067719_p4226152015416"><a name="zh-cn_topic_0022067719_p4226152015416"></a><a name="zh-cn_topic_0022067719_p4226152015416"></a>积分上限值，参照Flavor定义最大积分列。</p>
+<p id="zh-cn_topic_0022067719_p1810015516151"><a name="zh-cn_topic_0022067719_p1810015516151"></a><a name="zh-cn_topic_0022067719_p1810015516151"></a>仅T6型支持。</p>
+</td>
+</tr>
+<tr id="zh-cn_topic_0022067719_row1679202420545"><td class="cellrowborder" valign="top" width="17.03%" headers="mcps1.1.6.1.1 "><p id="zh-cn_topic_0022067719_p7794247543"><a name="zh-cn_topic_0022067719_p7794247543"></a><a name="zh-cn_topic_0022067719_p7794247543"></a>cpu_surplus_credit_charged</p>
+</td>
+<td class="cellrowborder" valign="top" width="12.26%" headers="mcps1.1.6.1.2 "><p id="zh-cn_topic_0022067719_p0760192175614"><a name="zh-cn_topic_0022067719_p0760192175614"></a><a name="zh-cn_topic_0022067719_p0760192175614"></a>CPU超额积分收费量</p>
+</td>
+<td class="cellrowborder" valign="top" width="32.75%" headers="mcps1.1.6.1.3 "><p id="zh-cn_topic_0022067719_p46801377376"><a name="zh-cn_topic_0022067719_p46801377376"></a><a name="zh-cn_topic_0022067719_p46801377376"></a>该指标表示在“CPU积分累积量”为零时，实例花费的超额积分并需要收费的积分量，以“分”为单位。</p>
+</td>
+<td class="cellrowborder" valign="top" width="13.530000000000001%" headers="mcps1.1.6.1.4 "><p id="zh-cn_topic_0022067719_p1079132485420"><a name="zh-cn_topic_0022067719_p1079132485420"></a><a name="zh-cn_topic_0022067719_p1079132485420"></a>≥0</p>
+</td>
+<td class="cellrowborder" valign="top" width="24.43%" headers="mcps1.1.6.1.5 "><p id="zh-cn_topic_0022067719_p1479224145411"><a name="zh-cn_topic_0022067719_p1479224145411"></a><a name="zh-cn_topic_0022067719_p1479224145411"></a>仅T6型支持。</p>
+</td>
+</tr>
 </tbody>
 </table>
 
