--- a/cn.zh-cn/API参考/附录.md
+++ b/cn.zh-cn/API参考/附录.md
@@ -62,6 +62,10 @@
 
 -   **[语音合成监控指标说明](语音合成监控指标说明.md)**  
 
+-   **[人脸识别监控指标说明](人脸识别监控指标说明.md)**  
+
+-   **[对话机器人服务监控指标说明](对话机器人服务监控指标说明.md)**  
+
 -   **[云桌面监控指标说明](云桌面监控指标说明.md)**  
 
 
