--- a/cn.zh-cn/API参考/虚拟私有云监控指标说明.md
+++ b/cn.zh-cn/API参考/虚拟私有云监控指标说明.md
@@ -2,7 +2,7 @@
 
 ## 功能说明<a name="zh-cn_topic_0024607920_section45043704193247"></a>
 
-本节定义了VPC服务上报云监控的监控指标的命名空间，监控指标列表和维度定义，用户可以通过云监控提供的API接口来检索VPC服务产生的监控指标和告警信息。
+本节定义了虚拟私有云上报云监控的监控指标的命名空间，监控指标列表和维度定义，用户可以通过云监控提供的API接口来检索虚拟私有云产生的监控指标和告警信息。
 
 ## 命名空间<a name="zh-cn_topic_0024607920_section20626347193247"></a>
 
@@ -10,7 +10,7 @@ SYS.VPC
 
 ## 监控指标<a name="zh-cn_topic_0024607920_section4222089193247"></a>
 
-**表 1**  虚拟私有云支持的监控指标
+**表 1**  弹性公网IP和带宽支持的监控指标
 
 <a name="zh-cn_topic_0024607920_table6444895193247"></a>
 <table><thead align="left"><tr id="zh-cn_topic_0024607920_row17328334193247"><th class="cellrowborder" valign="top" width="19.000000000000004%" id="mcps1.2.6.1.1"><p id="zh-cn_topic_0024607920_p61417783193247"><a name="zh-cn_topic_0024607920_p61417783193247"></a><a name="zh-cn_topic_0024607920_p61417783193247"></a>指标</p>
